# pam-analytics

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  project_roadmap.md  pyproject.toml
docker/: api.Dockerfile  dashboard.Dockerfile
docs/: architecture_design.md  fase2_ingestao.md  fase3_features.md  fase4_modelagem.md  fase5_api.md  fase6_dashboard.md  fase7_docker.md
notebooks/: 01_data_ingestion.ipynb  02_data_pre_processing.ipynb  03_feature_engineering.ipynb  04_clustering.ipynb
src/: pipeline_runner.py
src/api/: main.py  schemas.py  services.py
src/api/routers/: analytics.py  system.py
src/dashboard/: api_client.py  app.py
src/features/: builder.py
src/ingestion/: client.py  pipeline.py  sidra_mapping.py
src/models/: clusterer.py
src/utils/: logging_config.py
tests/: test_api.py  test_clusterer.py
